package net.rabarijaona.hexagonalarch.domain;

public interface StockSpi {
  int getProductAvailability(String productRef);
}
