package net.rabarijaona.hexagonalarch.infrastructure.perstistence;

import net.rabarijaona.hexagonalarch.infrastructure.perstistence.model.CartP;
import org.springframework.stereotype.Repository;

@Repository
public class CartRepository {

  public CartP findCartById(String cartId) {
    return null;
  }

  public CartP saveCart(CartP cart) {
    return null;
  }
}
