@startuml
package "Domain" #fefefe {
 package "Model" #fefefe {
  class Cart
  class Product
 }
  interface CartApi {
      +getCart(String cartId)
      +addProductToCart(String productRef, int quantityRequested, String cartId)
  }
  interface CartPersistenceSpi {
    +getCart(String cartId)
    +updateCart(Cart cart)
  }
  interface ProductSpi {
    +retrieveProduct(String productRef)
  }
  interface StockSpi {
    +getProductAvailability(String productRef)
  }
  class CartService

  CartService ..|> CartApi  : implement
  CartService ..|> CartPersistenceSpi: use
  CartService ..|> ProductSpi: use
  CartService ..|> StockSpi: use
  CartService ..|> Cart: use
  CartService ..|> Product: use
}



package "Infra" #fefefe {

  class PersistenceService
  class StockClientService
  class ProductClientService
  class CartRepository

  CartPersistenceSpi <|.. PersistenceService : implement
  ProductSpi <|.. ProductClientService : implement
  StockSpi <|.. StockClientService : implement
  PersistenceService ..|> CartRepository: use

}

package "Application" #fefefe {

  class CartController

  CartController ..|> CartService: use

}
@enduml